<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.danielburgnerjr.goodforce.GameRulesActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtGameRules"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="46dp"
                android:text="@string/gfGameRules"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/txtGRNumber1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="109dp"
                android:text="@string/gfGRNumber1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtGRNumber2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtGRNumber1"
                android:text="@string/gfGRNumber2"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtGRNumber3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtGRNumber2"
                android:text="@string/gfGRNumber3"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtGRNumber4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtGRNumber3"
                android:text="@string/gfGRNumber4"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtGRNumber5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtGRNumber4"
                android:text="@string/gfGRNumber5"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtGRNumber6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtGRNumber5"
                android:text="@string/gfGRNumber6"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtGRNumber7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtGRNumber6"
                android:text="@string/gfGRNumber7"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtGRNumber8"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtGRNumber7"
                android:text="@string/gfGRNumber8"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtGRNumber9"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtGRNumber8"
                android:text="@string/gfGRNumber9"
                android:textSize="18sp" />

        </RelativeLayout>

    </ScrollView>

</android.widget.RelativeLayout>
